# philoagents-course

./: .env.example  CONTRIBUTING.md  INSTALL_AND_USAGE.md  MULTIPLAYER_IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml  test_multiplayer.py
api/: main.py
data/: characters.json  evaluation.json  evaluation_dataset.json  extraction_metadata.json
notebooks/: chat_with_long_term_memory.ipynb  philosopher_entity.ipynb
philoagents/: Dockerfile  __init__.py  settings.py
philoagents-api/: .env.example  Dockerfile  Makefile  pyproject.toml
philoagents-api/data/: extraction_metadata.json
philoagents-api/notebooks/: chat_with_long_term_memory.ipynb
philoagents-api/src/philoagents/: config.py
philoagents-api/src/philoagents/application/conversation_service/: generate_response.py  reset_conversation.py
philoagents-api/src/philoagents/application/conversation_service/workflow/: chains.py  edges.py  graph.py  nodes.py  state.py
philoagents-api/src/philoagents/application/evaluation/: generate_dataset.py
philoagents-api/src/philoagents/application/rag/: retrievers.py
philoagents-api/src/philoagents/application/session_service/: session_manager.py
philoagents-api/src/philoagents/domain/: philosopher.py  philosopher_factory.py  prompts.py
philoagents-api/src/philoagents/infrastructure/: api.py
philoagents-api/tools/: call_agent.py
philoagents-backend/: .env.example  Dockerfile
philoagents-backend/notebooks/: chat_with_long_term_memory.ipynb
philoagents-backend/tools/: create_long_term_memory.py  (+1 more)
philoagents-ui/: Dockerfile
tools/: create_long_term_memory.py  delete_long_term_memory.py  evaluate_agent.py  generate_evaluation_dataset.py
ui/: README.md  index.html  package-lock.json  package.json  webpack.common.js
(+71 files in other folders)
