[project]
name = "philoagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "langchain-mongodb>=0.6.2",
    "langgraph>=0.4.9",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "opik>=1.7.37",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.12.1",
    "loguru>=0.7.3",
    "langchain-huggingface>=0.3.0",
    "langchain-community>=0.3.26",
    "wikipedia>=1.4.0",
    "ipykernel>=6.29.5",
    "pydantic>=2.11.7",
    "datasketch>=1.6.5",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philoagents"]

[tool.ruff]
target-version = "py312"
